--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
   <form id="loginForm">
     <h2 class="titre">Spaker</h2>
 
-    
+    <div class="ut">
+      <input type="email" id="email" placeholder="Email" required>
+    </div>
 
     <div class="ut">
       <input type="password" id="password" placeholder="Mot de passe" required>
@@ -23,10 +25,8 @@
     </div>
 
     <div class="ut">
-      AVATAR
-  <input type="file" id="avatarInput" accept="image/*">
-</div>
-
+      <input type="file" id="avatarInput" accept="image/*">
+    </div>
 
     <button type="submit" class="boutton">Login / Register</button>
   </form>
